* Fat Zebra: Fix xid 3D Secure field [curiousepic]
* SafeCharge: Mark support for European countries [curiousepic]
* Checkout V2: Pass customer ip option [curiousepic]
* Realex: Map AVS and CVV response codes [davidsantoso] #2424
* Opp: Send disable3DSecure custom parameter if present [davidsantoso] #2432
* SafeCharge: Map standard Active Merchant order_id field [davidsantoso] #2434

== Version 1.65.0 (April 26, 2017)
* Adyen: Add Adyen v18 gateway [adyenpayments] #2272
* Authorize.Net: Force refund of unsettled payments via void [bizla] #2399
* Barclays ePDQ: removed because it has been replaced by a new API [bdewater] #2331
* Beanstream: Map ISO province codes for US and CA [shasum] #2396
* Braintree Blue: Change :full_refund option to :force_full_refund_if_unsettled [bizla] #2403
* Braintree Blue: Force refund of unsettled payments via void [bizla] #2398
* Checkout V2: Fix sandbox URL [nicolas-maalouf-cko] #2391
* Checkout V2: Fix success_from not properly checking two possible success codes [davidsantoso]
* Cybersource: Rescue XML parse exception [shasum] #2380
* GlobalCollect: Make message and error reporting more robust [curiousepic] #2370
* GlobalCollect: Set REJECTED refunds as unsuccessful transactions [davidsantoso] #2365
* GlobalCollect: Truncate firstName field to 15 characters [davidsantoso]
* JetPay: Pass down authorization payment method token to refund a capture [davidsantoso]
* Openpay: Support card points [shasum] #2401
* Orbital: Don't send CVV indicator if CVV is not present [curiousepic] #2368
* PayU LATAM: Fix incorrect capture method definition [davidsantoso]
* Payeezy: Support dynamic soft descriptors [shasum] #2384
* Pin: Add metadata optional field [shasum] #2363
* Qvalent: Add soft descriptor fields. Add authorize, capture, and void [davidsantoso]
* SafeCharge: Add gateway [davidsantoso]
* SagePay: Support Repeat transactions [curiousepic] #2395
* Stripe: Support custom application in X-Stripe-Client-User-Agent header [davidsantoso]